Layout changes and spacing fixes

--- a/assets/themes/discord.styl
+++ b/assets/themes/discord.styl
@@ -25,7 +25,7 @@ $material-dark := {
     background: $grey.darken-1,
     color: rgba(#fff, .87)
   },
-  dividers: rgba(#000, .12),
+  dividers: rgba(#fff, .2),
   text: {
     theme: #fff,
     primary: #fff,
